--- a/network_balance_scaling_env.yml
+++ b/network_balance_scaling_env.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
+#  - _openmp_mutex=4.5
   - boost=1.74.0
   - boost-cpp=1.74.0
   - bzip2=1.0.8
@@ -23,20 +23,20 @@ dependencies:
   - jpeg=9d
   - kiwisolver=1.3.1
   - lcms2=2.12
-  - ld_impl_linux-64=2.33.1
+#  - ld_impl_linux-64=2.33.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libedit=3.1.20191231
   - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=7.5.0
+#  - libgcc-ng=9.3.0
+#  - libgfortran-ng=7.5.0
   - libgfortran4=7.5.0
-  - libgomp=9.3.0
+#  - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libopenblas=0.3.12
   - libpng=1.6.37
-  - libstdcxx-ng=9.3.0
+#  - libstdcxx-ng=9.3.0
   - libtiff=4.2.0
   - libuuid=2.32.1
   - libwebp-base=1.2.0
