--- a/predictor/nbs_dc_predictor_env.yml
+++ b/predictor/nbs_dc_predictor_env.yml
@@ -34,15 +34,15 @@ dependencies:
   - kiwisolver=1.3.1
   - krb5=1.17.2
   - lcms2=2.11
-  - ld_impl_linux-64=2.33.1
+#  - ld_impl_linux-64=2.33.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libcurl=7.71.1
   - libedit=3.1.20191231
   - libev=4.33
   - libffi=3.3
-  - libgcc-ng=9.1.0
-  - libgfortran-ng=7.5.0
+#  - libgcc-ng=9.1.0
+#  - libgfortran-ng=7.5.0
   - libgfortran4=7.5.0
   - libiconv=1.16
   - liblapack=3.9.0
@@ -51,7 +51,7 @@ dependencies:
   - libpng=1.6.37
   - libprotobuf=3.14.0
   - libssh2=1.9.0
-  - libstdcxx-ng=9.1.0
+#  - libstdcxx-ng=9.1.0
   - libtiff=4.1.0
   - libuuid=2.32.1
   - libwebp-base=1.1.0
